# huaBan-pro

./: BUGFIX_SUMMARY.md  BUILD_GUIDE.md  CMakeLists.txt  CROSS_PLATFORM_EVALUATION.md  PROJECT_README.md  README.md  TECHNICAL_ARCHITECTURE.md  animation.cpp  animation.h  build.bat  build.py  canvas.cpp  canvas.h  fileio.cpp  fileio.h  filter.cpp  filter.h  history.cpp  history.h  huaBan-pro.sln  huaBan-pro.vcxproj  huaBan-pro.vcxproj.filters  huaBan.h  index.html  layer.cpp  layer.h  main.cpp  main_new.cpp  main_old.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h  test_easyx_url.py  tools.cpp  tools.h  ui.cpp  ui.h
.github/workflows/: build.yml
